environments/production/monitoring/alertmanager/alertmanager-service.yaml
##---
# Source: prometheus/templates/alertmanager-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prometheus
    chart: prometheus-5.4.3
    component: "alertmanager"
    heritage: Tiller
    release: prod
  name: prod-prometheus-alertmanager
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 9093
  selector:
    app: prometheus
    component: "alertmanager"
    release: prod
  type: "ClusterIP"
